--- a/VuforiaSampleSwift/Main.storyboard
+++ b/VuforiaSampleSwift/Main.storyboard
@@ -73,7 +73,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="gWf-SX-Vcc" kind="show" id="qMf-Yx-mHa"/>
+                                            <segue destination="gWf-SX-Vcc" kind="show" identifier="segueSubjectDetailVC" id="qMf-Yx-mHa"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -125,7 +125,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" id="6Fl-wi-bJk"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="segueVuforiaVC" id="6Fl-wi-bJk"/>
                                 </connections>
                             </button>
                         </subviews>
